sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_empty_arrivalspeed/errors.duarouter
Error: Attribute 'arrivalspeed' in definition of a vehicle is empty.
Error: Invalid arrivalspeed definition for vehicle '1'
Quitting (on error).
